# python-organizationatlas

./: README.md
.github/workflows/: ci.yml  release.yml
django-organizationatlas/: env.example  pyproject.toml
django-organizationatlas/docs/: AI.md  README.md  development.md  migration-from-company.md  purpose.md  structure.md  weaknesses-review.md
django-organizationatlas/referentiel/export/: dump.csv
django-organizationatlas/referentiel/import/: ape.csv  test.csv
django-organizationatlas/src/django_organizationatlas/: __init__.py  apps.py  helpers.py  urls.py  views.py
django-organizationatlas/src/django_organizationatlas/admin/: __init__.py  (+7 more)
django-organizationatlas/tests/: __init__.py  settings.py  test_data_references.py  test_references_command.py  test_referentiel_command.py  urls.py
python-organizationatlas/: env.example  pyproject.toml
python-organizationatlas/docs/: AI.md  purpose.md  structure.md
python-organizationatlas/src/organizationatlas/: __init__.py  helpers.py
python-organizationatlas/src/organizationatlas/commands/: __init__.py  _base.py  code.py  documents.py  events.py  search.py
python-organizationatlas/src/organizationatlas/fields/: __init__.py  france.py
python-organizationatlas/src/organizationatlas/providers/: __init__.py
python-organizationatlas/src/organizationatlas/providers/europe/: __init__.py
python-organizationatlas/src/organizationatlas/providers/europe/france/: __init__.py  entdatagouv.py  huwise.py  inpi.py  insee.py
python-organizationatlas/tests/: __init__.py  test_client.py  test_inpi_provider.py
(+50 files in other folders)
